# web-music-player-server

./: .gitignore  README.md  app.py  manage.py  pyproject.toml  requirements.txt  run.bat
api/: serializers.py  urls.py  views.py
local_data/: admin.py  apps.py  models.py
local_data/migrations/: 0001_initial.py
player/: __main__.py  app.py  cache.py  jobs.py  pwd.py
player/static/css/: index.css  login.css
player/static/js/: index.js  login.js
player/templates/: 404.html  index.html
scripts/: sync_db.py
src/music_player/: app.py  cache.py  jobs.py  pwd.py
src/music_player/core/: core.py
src/music_player/static/js/: index.js
src/music_player/templates/: 404.html  login.html
src/music_player_server/: app.py
src/web_music_player/: app.py
src/web_music_player/core/: core.py
static/css/: index.css  login.css
static/js/: index.js  login.js
templates/: index.html  login.html
web_music_player/: asgi.py  settings.py  urls.py  wsgi.py
