[project]
name = "music-player"
version = "0.1.0"
description = "Web-based music player"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "mashumaro[orjson,toml]>=3.15",
    "tinytag>=2.0.0",
]

[project.scripts]
music-player = "music_player.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
