[project]
name = "web-music-player"
version = "0.1.0"
description = "server"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "mashumaro[orjson]>=3.15",
    "tinytag>=2.0.0",
]

[project.scripts]
web-music-player-server = "web_music_player.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
